volexc/tests/ui/parse_invalid_item_keyword.out
Error: found 'function' expected 'struct', 'message', 'enum', 'union', or end of input
   ╭─[ parse_invalid_item_keyword.vol:2:1 ]
   │
 2 │ function Foo {
   │ ────┬───  
   │     ╰───── Unexpected 'function'
   │ 
   │ Note: Expected one of: 'struct', 'message', 'enum', 'union', end of input
───╯